[package]
name = "tokio-rustls-wasi"
version = "0.25.0-alpha"
license = "MIT/Apache-2.0"
repository = "https://github.com/WasmEdge/tokio-rustls"
homepage = "https://github.com/WasmEdge/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming", "wasi"]
edition = "2021"
rust-version = "1.63"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
rustls = { version = "0.22", default-features = false }
pki-types = { package = "rustls-pki-types", version = "1" }

[target.'cfg(target_os="wasi")'.dependencies]
tokio_wasi = { version = "1" }
[target.'cfg(not(target_os="wasi"))'.dependencies]
tokio = { version = "1" }

[features]
default = ["logging", "tls12", "ring"]
early-data = []
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]

[dev-dependencies]
argh = "0.1.1"
futures-util = "0.3.1"
lazy_static = "1.1"
webpki-roots = "0.26"
rustls-pemfile = "2"

[target.'cfg(target_os="wasi")'.dev-dependencies]
tokio_wasi = { version = "1", features = ["full"] }
[target.'cfg(not(target_os="wasi"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }


[lib]
name = "tokio_rustls"
path = "src/lib.rs"
